# conduit

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.txt  LICENSE  Makefile  NOTICE  OPENAPI_IMPLEMENTATION.md  README.md  SECURITY.md  STORAGE_PROVIDERS_IMPLEMENTATION.md  TESTING.md  docker-compose.integration.yml  docker-compose.marquez.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
conduit-api/: API_DOCS.md  Cargo.toml  openapi.json
conduit-api/src/: auth.rs  error.rs  lib.rs  middleware.rs  plan_cache.rs  rate_limit.rs  routes.rs  state.rs  websocket.rs
conduit-api/src/handlers/: auth.rs  backfill.rs  cluster.rs  connections.rs  contracts.rs  dags.rs  docs.rs  envs.rs  events.rs  lineage.rs  metrics.rs  mod.rs  openlineage_ingest.rs  plan.rs  prometheus.rs  runs.rs
conduit-api/tests/: apply_test.rs  auth_audit_test.rs  auth_enforcement_test.rs  auth_redteam.rs  auth_test.rs  cors_test.rs  handler_tests.rs  integration_test.rs  persistence_test.rs  pipeline_e2e_test.rs  python_sdk_e2e_test.rs
conduit-api/tests/fixtures/: sdk_e2e_dag.py
conduit-bench/: Cargo.toml
conduit-bench/benches/: compiler_bench.rs  lineage_bench.rs  planner_bench.rs  scheduler_bench.rs  state_bench.rs
conduit-bench/src/: lib.rs
conduit-cli/: Cargo.toml
conduit-cli/src/: main.rs  tracing_setup.rs
conduit-cli/tests/: cli_integration_test.rs  cli_smoke_test.rs  distributed_run_test.rs
conduit-cli/tests/fixtures/: etl_pipeline.py  py_dag.py
conduit-cli/tests/fixtures/impact/base/: impact_demo.yaml
conduit-cli/tests/fixtures/impact/head/: impact_demo.yaml
conduit-common/: Cargo.toml
conduit-common/src/: backfill.rs  config.rs  contracts.rs  dag.rs  error.rs  event.rs  fingerprint.rs  incremental.rs  lib.rs  metrics.rs  snapshot.rs
conduit-compiler/: Cargo.toml
conduit-compiler/benches/: parse_benchmark.rs
conduit-compiler/src/: lib.rs  parser.rs  plan.rs  resolver.rs  sql_io_inference.rs  yaml_parser.rs
conduit-compiler/tests/: compiler_fixture_tests.rs  failure_injection_test.rs  proptest_dag.rs  proptest_resolver.rs
conduit-compiler/tests/fixtures/: all_task_types.yaml  contracts.yaml  diamond_dag.py  incremental.yaml  linear_etl.py  multi_dag.py  simple_etl.yaml
conduit-distributed/: Cargo.toml  build.rs
conduit-distributed/proto/: conduit.proto
conduit-distributed/src/: assignment_store.rs  convert.rs  coordinator.rs  distributed_executor.rs  grpc_client.rs  grpc_server.rs  lib.rs  proto_types.rs  worker.rs  worker_pool.rs
conduit-distributed/tests/: coordinator_recovery_test.rs  distributed_e2e_test.rs  grpc_integration_test.rs  proptest_proto.rs  soak.rs
conduit-executor/: Cargo.toml
conduit-executor/src/: executor.rs  lib.rs  process_runner.rs  protocol.rs  retry.rs
conduit-executor/tests/: executor_integration_test.rs  failure_injection_test.rs  sql_provider_test.rs
conduit-lineage/: Cargo.toml  README.md
conduit-lineage/src/: catalog.rs  contracts.rs  cross_task.rs  dbt_manifest.rs  impact.rs  impact_report.rs  lib.rs  lineage_graph.rs  openlineage.rs  openlineage_ingest.rs  plan_impact.rs  schema.rs  sql_parser.rs
conduit-lineage/tests/: cross_task_e2e.rs  jinja_lineage.rs  marquez_roundtrip.rs  plan_impact_e2e.rs  proptest_sql_parser.rs  view_lineage.rs
conduit-planner/: Cargo.toml
conduit-planner/src/: backfill_engine.rs  change_detector.rs  deployment_plan.rs  fingerprinter.rs  impact_analyzer.rs  incremental.rs  lib.rs
conduit-planner/tests/: proptest_fingerprint.rs
conduit-providers/: Cargo.toml
conduit-providers/src/: errors.rs  lib.rs  plugin.rs  registry.rs  secrets.rs  traits.rs  traits_saas.rs
conduit-providers/src/providers/: bigquery.rs  cassandra.rs  clickhouse.rs  cockroachdb.rs  duckdb.rs  dynamodb.rs  elasticsearch.rs  gcs.rs  github.rs  http.rs  hubspot.rs  jira.rs  kafka.rs  kinesis.rs  mod.rs  mongodb.rs  mysql.rs  neo4j.rs  oracle.rs  params.rs  postgres.rs  pubsub.rs  rabbitmq.rs  redis_doc.rs  redis_stream.rs  redshift.rs  s3.rs  salesforce.rs  sanitize.rs  slack.rs  snowflake.rs  sqlite.rs  sqlserver.rs  stripe.rs  timescaledb.rs
conduit-providers/tests/: other_providers_test.rs  provider_docs_test.rs  registry_test.rs  sql_providers_test.rs  stub_contract_test.rs
conduit-python/: Cargo.toml  DELIVERABLE.txt  MANIFEST.md  QUICKSTART.md  README.md  SUMMARY.txt  TECHNICAL.md  pyproject.toml
conduit-python/examples/: plan_apply_workflow.py  test_fixtures.py
conduit-python/python/conduit_native/: __init__.py
conduit-python/src/: compiler.rs  lib.rs  lineage.rs  planner.rs  state.rs
conduit-python/tests/: test_lineage_platform.py
conduit-scheduler/: Cargo.toml
conduit-scheduler/src/: alerts.rs  cron.rs  lib.rs  pool_manager.rs  scheduler.rs  trigger.rs
conduit-scheduler/tests/: proptest_cron.rs  proptest_scheduler.rs  scheduler_integration_test.rs
conduit-state/: Cargo.toml
conduit-state/src/: env_history_store.rs  environment_manager.rs  event_store.rs  external_lineage_store.rs  lib.rs  snapshot_store.rs
conduit-state/tests/: backup_recovery_test.rs  proptest_event_store.rs
conduit-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
conduit-vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
conduit-wasm/: Cargo.toml
conduit-wasm/src/: host_functions.rs  lib.rs  plugin.rs  registry.rs  runtime.rs  sandbox.rs
dags/: demo_pipeline.py  (+5 more)
sdk/python/: README.md  pyproject.toml
sdk/python/conduit_sdk/: __init__.py  _runtime.py  backfill.py  context.py  contracts.py  decorators.py  incremental.py  lineage.py  xcom.py
sdk/python/conduit_sdk/hooks/: __init__.py  base.py  database.py  filesystem.py  http.py
sdk/python/conduit_sdk/operators/: __init__.py  base.py  bash_operator.py  notifications.py  python_operator.py  sensor.py  sql_operator.py
sdk/python/tests/: test_backfill.py  test_context.py  test_contracts.py  test_decorators.py  test_incremental.py  test_operators.py  test_runtime_mode.py  test_xcom.py
(+110 files in other folders)
