[package]
name = "conduit-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Load testing and benchmarks for Conduit"

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "compiler_bench"
harness = false

[[bench]]
name = "planner_bench"
harness = false

[[bench]]
name = "state_bench"
harness = false

[[bench]]
name = "lineage_bench"
harness = false

[dependencies]
conduit-common = { path = "../conduit-common" }
conduit-compiler = { path = "../conduit-compiler" }
conduit-scheduler = { path = "../conduit-scheduler" }
conduit-planner = { path = "../conduit-planner" }
conduit-state = { path = "../conduit-state" }
conduit-lineage = { path = "../conduit-lineage" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
