[package]
name = "conduit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Conduit CLI: the main binary entry point"

[[bin]]
name = "conduit"
path = "src/main.rs"

[dependencies]
include_dir = "0.7"
conduit-common = { path = "../conduit-common" }
conduit-compiler = { path = "../conduit-compiler" }
conduit-state = { path = "../conduit-state" }
conduit-scheduler = { path = "../conduit-scheduler" }
conduit-executor = { path = "../conduit-executor" }
conduit-planner = { path = "../conduit-planner" }
conduit-lineage = { path = "../conduit-lineage" }
conduit-api = { path = "../conduit-api" }
conduit-providers = { path = "../conduit-providers" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
regex = "1"
walkdir = "2"

# Optional OpenTelemetry exporter — enabled via the `otel` feature.
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = []
# Wire OTLP exporter into the tracing subscriber. Without this feature the
# binary stays dep-clean and the fmt subscriber is the only sink.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
conduit-compiler = { path = "../conduit-compiler" }
conduit-common = { path = "../conduit-common" }
conduit-state = { path = "../conduit-state" }
regex = "1"
assert_cmd = "2"
predicates = "3"
