[package]
name = "conduit-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, error handling, and configuration for Conduit"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
