[package]
name = "conduit-lineage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Column-level lineage extraction, schema validation, and breaking change detection"

[dependencies]
conduit-common = { path = "../conduit-common" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlparser = { workspace = true }
