[package]
name = "conduit-planner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Change detection, fingerprinting, impact analysis, and plan/apply workflow"

[dependencies]
conduit-common = { path = "../conduit-common" }
conduit-compiler = { path = "../conduit-compiler" }
conduit-state = { path = "../conduit-state" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
