[package]
name = "conduit-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider plugin system: connection registry and data source adapters"

[dependencies]
conduit-common = { path = "../conduit-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
