[package]
name = "conduit-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider plugin system: connection registry and data source adapters"

[dependencies]
conduit-common = { path = "../conduit-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
percent-encoding = { workspace = true }
jsonwebtoken = "9"
base64 = "0.22"
duckdb = { version = "1", features = ["bundled"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
rskafka = "0.6"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
