[package]
name = "conduit-python"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "PyO3 bindings for Conduit pipeline orchestrator"

[lib]
name = "conduit_native"
crate-type = ["cdylib"]

[dependencies]
conduit-common = { path = "../conduit-common" }
conduit-compiler = { path = "../conduit-compiler" }
conduit-planner = { path = "../conduit-planner" }
conduit-lineage = { path = "../conduit-lineage" }
conduit-state = { path = "../conduit-state" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
