[package]
name = "conduit-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Event store, snapshot manager, and virtual environment management for Conduit"

[dependencies]
conduit-common = { path = "../conduit-common" }
# `testing` feature exposes the conformance suite. The cost is a few
# unused helpers in release builds; the win is one source of truth for
# backend correctness across in-memory and persistent implementations.
conduit-lineage = { path = "../conduit-lineage", features = ["testing"] }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
