[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conduit-sdk"
version = "0.1.0"
description = "Python SDK for Conduit — the Rust-native data pipeline orchestrator"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["orchestrator", "pipeline", "dag", "conduit", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]
